Fix header and footer spacing

--- a/components/layout/Footer.module.css
+++ b/components/layout/Footer.module.css
@@ -10,11 +10,12 @@
 .row {
     display: flex;
     flex-direction: row;
-    flex-wrap: nowrap;
     justify-content: center;
     align-items: center;
     align-content: center;
     line-height: 35px;
+    width: 100%;
+    max-width: 600px;
 }
 
 .column {
